# QuickSched

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac  configure.in
autom4te.cache/: output.0  requests  traces.0  traces.2
cmake/: CheckEnv.cmake  FindBLAS2.cmake  config.h.in
doc/: Doxyfile  Doxyfile.in  Makefile.in
examples/: Makefile.am  Makefile.in  make_gadget_ic.py  mkplots_tasks.m  plot.py  plot_sorted.py  plot_sorted_all.py  runs.sh  runs_bh.sh  runs_qr.sh  test.c  test_bh.c  test_bh_2.c  test_bh_3.c  test_bh_sorted.c  test_fmm_sorted.c  test_qr.c  test_qr_ompss.c
examples/theory/: multipoles.tex
paper/: paper.tex  quicksched.bib
paper/figures/: BH_scaling.eps  BH_times.eps  QR_scaling.eps  tasks_qr.eps  tasks_qr_ompss.eps
spack/: repo.yaml
src/: Makefile.am  Makefile.in  atomic.h  cycle.h  error.h  lock.h  qsched.c  qsched.h  queue.c  queue.h  quicksched.h  res.h  sched.c  sched.h  task.h  version.h.in
